<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Diary</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="diary_entries">Diary list</string>
    <string name="input_hint">Start typing your thoughts…</string>
    <string name="source_code">Source code</string>

    <string name="preferences_app">App Preferences</string>
    <string name="preference_app_title">App Title</string>

    <string name="preferences_editor">Editor Preferences</string>
    <string name="preference_show_markdown_punctuation">Show Markdown Punctuation</string>
    <string name="preference_show_markdown_punctuation_desc">Requires a restart of the app</string>

    <string name="preferences_import_export">Import/Export (Under construction)</string>
    <string name="preference_import">Import diary</string>
    <string name="preference_export">Export diary</string>

    <string name="not_yet_implemented">Not yet implemented</string>

    <string name="export_done">Export done</string>
    <string name="import_done">Import done</string>

    <string name="export_file_name" translatable="false">diary_backup.zip</string>
    <string name="source_code_url" translatable="false">https://github.com/TecCheck/Diary</string>
</resources>